--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <!-- About start -->
   <section data-aos="fade-up">
     <div class="container" id="About">
-      <h1 class="text-center">About Me</h1>
+      <h1 class="text-center">About Portfolio</h1>
       <div class="row">
         <div class="col-md-4">
           <img src="/images/I2.jpg" alt="passportPicture" class="card-img img-fluid">
@@ -91,22 +91,13 @@
 
         </div>
         <div class="col-md-8">
-          <p> A portfolios meaning can be defined as a collection of financial assets and investment tools that are
-            held by an individual, a financial institution or an investment firm. To develop a profitable portfolio, it
-            is essential to become familiar with its fundamentals and the factors that influence it.
-            What is a Portfolio?
-            As per portfolio definition, it is a collection of a wide range of assets that are owned by investors. The
-            said collection of financial assets may also be valuables ranging from gold, stocks, funds, derivatives,
-            property, cash equivalents, bonds, etc. Individuals put their money in such assets to generate revenue while
-            ensuring that the original equity of the asset or capital does not erode. Depending on ones know-how of the investment market, individuals may either manage their portfolio or seek
-            the assistance of professional financial advisors for the same. As per financial experts, diversification is a vital concept in portfolio management.One of the key concepts in portfolio management is the wisdom of diversification—which simply means not putting all of your eggs in one basket. Diversification tries to reduce risk by allocating investments among various financial instruments, industries, and other categories. It aims to maximize returns by investing in different areas that would each react differently to the same event. There are many ways to diversify.
-            How you choose to do it is up to you. Your goals for the future, your appetite for risk, and your personality are all factors in deciding how to build your portfolio.  
-            Regardless of your portfolio's asset mix, all portfolios should contain some degree of diversification, and reflect the investor's tolerance for risk, return objectives, time horizon, and other pertinent constraints, including tax position, liquidity needs, legal situations, and unique circumstances.</p>
-
+          <p> Iam a student working as Intern at skillsbud IBM. To describe my personality iam a enthusiastic,self-learner and determined working partner. I myself developed this site as intern project and to describe about the site it is portfolio site where you can see your bussiness statistics.As per portfolio definition, it is a collection of a wide range of assets that are owned by investors. The said collection of financial assets may also be valuables ranging from gold, stocks, funds, derivatives, property, cash equivalents, bonds, etc. Individuals put their money in such assets to generate revenue while ensuring that the original equity of the asset or capital does not erode. 
+            Depending on one’s know-how of the investment market, individuals may either manage their portfolio or seek the assistance of professional financial advisors for the same. As per financial experts, diversification is a vital concept in portfolio management. </p>
 
           <div class="row">
             <div class="col-md-6">
-              <ul>Developer details
+              <h2>Developer Details</h2>
+              <ul>
                 <li>Name : Manohar</li>
                 <li>Age : 20</li>
                 <li>Student</li>
